[workspace]
members = ["sail", "borealis", "common", "libarch-sys"]
default-members = ["sail", "borealis", "common"]

# deserializing/converting the AST takes forever and overflows the stack without optimisations
[profile.dev]
opt-level = 3

[profile.release]
lto = "fat" # made it around 5% faster
debug = true
