[workspace]
members = ["sail", "borealis", "common", "libarch-sys"]
default-members = ["sail", "borealis", "common"]
resolver = "2"

# deserializing/converting the AST takes forever and overflows the stack without optimisations
[profile.dev]
opt-level = 3

[profile.release]
lto = "thin" # fat made it around 5% faster
debug = true
