[package]
name = "borealis"
version = "0.3.0"
edition = "2021"
authors = ["AVISI Research Group"]
description = "Sail frontend for GenSim"

[dependencies]
common = { path = "../common" }
sail = { path = "../sail" }

displaydoc = "0.2.4"
thiserror = "1.0.57"
errctx = "1.0.0"
color-eyre = { version = "0.6.2", default-features = false }
pretty_assertions = "1.4.0"
pretty_env_logger = "0.5.0"
log = "0.4.21"

clap = { version = "4.5.2", features = ["derive"] }

bincode = "1.3.3"
deepsize = "0.2.0"
serde_json = "1.0.114"
num-bigint = { version = "0.4.4", features = ["serde"] }
once_cell = "1.19.0"
lz4_flex = { version = "0.11.2", default-features = false, features = [
    "frame",
] }
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.3"
dot = "0.1.4"
itertools = "0.12.1"
kinded = "0.3.0"

quote = "1.0.35"
syn = { version = "2.0.52",  features = ["full", "parsing"] }
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"
ansi_term = "0.12.1"
