[package]
name = "borealis"
version = "0.3.0"
edition = "2021"
authors = ["AVISI Research Group"]
description = "Sail frontend for GenSim"

[dependencies]
common = { path = "../common" }
sailrs = { path = "../sailrs" }

displaydoc = "0.2.4"
thiserror = "1.0.59"
errctx = "1.0.0"
color-eyre = { version = "0.6.3", default-features = false }
pretty_assertions = "1.4.0"
pretty_env_logger = "0.5.0"
log = "0.4.21"
clap = { version = "4.5.4", features = ["derive"] }
deepsize = "0.2.0"
serde_json = "1.0.116"
num-bigint = { version = "0.4.4", features = ["serde"] }
once_cell = "1.19.0"
regex = "1.10.4"
dot = "0.1.4"
itertools = "0.12.1"
kinded = "0.3.0"
quote = "1.0.36"
syn = { version = "2.0.60",  features = ["full", "parsing"] }
prettyplease = "0.2.19"
proc-macro2 = "1.0.81"
memmap2 = "0.9.4"
rkyv = {version = "0.7.44", default-features = false, features = ["std", "alloc", "size_64"] }
parking_lot = "0.12.2"
cargo-util-schemas = "0.2.0"
toml = "0.8.12"
semver = { version = "1.0.22", features = ["serde"] }
walkdir = "2.5.0"
rayon = "1.10.0"
