[package]
name = "borealis"
version = "0.3.0"
edition = "2021"
authors = ["AVISI Research Group"]
description = "Sail frontend for GenSim"

[dependencies]
common = { path = "../common" }
sailrs = { path = "../sailrs" }

displaydoc = "0.2.4"
thiserror = "1.0.61"
errctx = "1.0.0"
color-eyre = { version = "0.6.3", default-features = false }
pretty_assertions = "1.4.0"
pretty_env_logger = "0.5.0"
log = "0.4.21"
clap = { version = "4.5.4", features = ["derive"] }
deepsize = "0.2.0"
serde_json = "1.0.117"
num-bigint = { version = "0.4.5", features = ["serde"] }
once_cell = "1.19.0"
regex = "1.10.4"
dot = "0.1.4"
itertools = "0.13.0"
kinded = "0.3.0"
quote = "1.0.36"
syn = { version = "2.0.65",  features = ["full", "parsing"] }
prettyplease = "0.2.20"
proc-macro2 = "1.0.83"
memmap2 = "0.9.4"
rkyv = {version = "0.7.44", default-features = false, features = ["std", "alloc", "size_64"] }
parking_lot = "0.12.2"
cargo-util-schemas = "0.3.0"
toml = "0.8.13"
semver = { version = "1.0.23", features = ["serde"] }
walkdir = "2.5.0"
rayon = "1.10.0"
dashmap = { version = "5.5.3", features = ["rayon"] }
