[package]
name = "common"
version = "0.0.0"
edition = "2021"
authors = ["AVISI Research Group"]

[dependencies]
ocaml = { version = "1.0.0-beta.5", features = ["no-panic-hook"] }
deepsize = "0.2.0"
lasso = { version = "0.7.2", features = ["multi-threaded"] }
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
twox-hash = "1.6.3"
quote = "1.0.35"
proc-macro2 = "1.0.79"

[dev-dependencies]
pretty_assertions = "1.4.0"
