[package]
name = "common"
version = "0.0.0"
edition = "2021"
authors = ["AVISI Research Group"]

[dependencies]
ocaml = { version = "1.0.0-beta.5", features = ["no-panic-hook"] }
deepsize = "0.2.0"
lasso = { version = "0.7.2", features = ["multi-threaded", "deepsize", "serialize"] }
once_cell = "1.19.0"
serde = { version = "1.0.199", features = ["derive"] }
twox-hash = "1.6.3"
quote = "1.0.36"
proc-macro2 = "1.0.81"
errctx = "1.0.0"
color-eyre = "0.6.3"
pretty_env_logger = "0.5.0"
rkyv = { version = "0.7.44", default-features = false, features = ["std", "alloc", "size_64"] }
byte-unit = "5.1.4"
parking_lot = "0.12.2"

# used only to get around lasso::ThreadedRodeo API
bincode = "1.3.3"

[dev-dependencies]
pretty_assertions = "1.4.0"
