[package]
name = "sail"
version = "0.1.1"
edition = "2021"
authors = ["AVISI Research Group"]
description = "Rust interface for the the [Sail compiler and AST](https://www.cl.cam.ac.uk/~pes20/sail/) written in OCaml."
homepage = "https://avisi.org.uk"
repository = "https://github.com/avisi-group/borealis"

[dependencies]
common = { path = "../common" }

errctx = { git = "https://github.com/fmckeogh/errctx" }

ocaml = { version = "1.0.0-beta.5", features = ["no-panic-hook"] }
once_cell = "1.17.0"
parking_lot = "0.12.1"
displaydoc = "0.2.3"
thiserror = "1.0.38"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
deepsize = "0.2.0"
num-bigint = { version = "0.4.3", features = ["serde"] }
serde_json = "1.0.91"
strum = { version = "0.24.1", features = ["derive"] }
phf = { version = "0.11.1", features = ["macros"] }

[build-dependencies]
cc = "1.0.79"
color-eyre = "0.6.2"

[dev-dependencies]
color-eyre = { version = "0.6.2", default-features = false }
insta = { version = "1.26.0", features = ["json", "filters"] }
proptest = "1.0.0"
serde_json = "1.0.91"
