[package]
name = "sail"
version = "0.1.1"
edition = "2021"
authors = ["AVISI Research Group"]
description = "Rust interface for the the [Sail compiler and AST](https://www.cl.cam.ac.uk/~pes20/sail/) written in OCaml."
homepage = "https://avisi.org.uk"
repository = "https://github.com/avisi-group/borealis"

[dependencies]
common = { path = "../common" }
ocaml = { version = "1.0.0-beta.5", features = ["no-panic-hook"] }
once_cell = "1.19.0"
parking_lot = "0.12.1"
displaydoc = "0.2.4"
thiserror = "1.0.57"
errctx = "1.0.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
deepsize = "0.2.0"
num-bigint = { version = "0.4.4", features = ["serde"] }
serde_json = "1.0.114"
strum = { version = "0.26.1", features = ["derive"] }
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.3"

[build-dependencies]
cc = "1.0.88"
color-eyre = "0.6.2"

[dev-dependencies]
color-eyre = { version = "0.6.2", default-features = false }
insta = { version = "1.35.1", features = ["json", "filters"] }
proptest = "1.4.0"
serde_json = "1.0.114"
